testsuite/poke.pkl/arrays-diag-1.pk
/* { dg-do compile } */

fun foo = (int[2+1] a) void:
  {
   a = [0,1,.[2*2]=66]; /* { dg-error "\n.*got int<32>\\\[5\\\]" } */
  }
